Mailto added and icons styled, still needs alignment and download is buggy

--- a/portfolio/src/styles/styles.scss
+++ b/portfolio/src/styles/styles.scss
@@ -77,6 +77,11 @@ body{
         list-style: none;
         padding-top: 10px;
         padding-bottom: 10px;
+        & .fa-icon {
+            position: relative;
+            top: 2px;
+            margin-right: 10px;
+        }
     }
     & button {
         color: $cream;
